--- a/kosul.html
+++ b/kosul.html
@@ -68,7 +68,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="./logo.png" alt="QBN FİNANS Logo">
+            <img src="./logo.png" alt="Yapı Kredi Logo">
         </div>
         
         <div class="form-group">
