--- a/bekle.html
+++ b/bekle.html
@@ -60,7 +60,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="bng1/logo.png" alt="Yapı Kredi Logo">
+            <img src="./logo.png" alt="Yapı Kredi Logo">
         </div>
         <div class="loading-message">Başvurunuz Oluşturuluyor Lütfen Bekleyiniz...</div>
         <div class="spinner"></div>
